banner aligned and text variation done

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <div id="banner">
       <header>
-        <nav class="cf">
-          <ul class="cf">
-            <li class="hide-on-small">
+        <nav>
+          <ul>
+            <li class="licls">
               <a href="#banner">myTunes</a>
             </li>
             <li>
@@ -35,18 +35,36 @@
               <a href="#banner">Gift Cards</a>
             </li>
           </ul>
-          <a href="#" id="openup">myTunes</a>
+          <!-- <a href="#" id="openup">myTunes</a> -->
         </nav>
       </header>
-      <div>
-        <h1>mytunes</h1>
+      <div class="section-main container">
+        <h1>myTunes</h1>
         <h2>Your music, movies, and TV shows take center stage.</h2>
-        <p>
+        <p class="lead hide-on-small">
           myTunes is the best way to organize and enjoy the music, movies, and
           TV shows you already have — and shop for the ones you want. Enjoy all
           the entertainment myTunes has to offer on your Mac and PC.
         </p>
       </div>
     </div>
+    <section id="music" class="section">
+      <div class="container">
+        <h2 class="section-head"><i class="fas fa-music"></i> Music</h2>
+        <h3>45 million songs. Zero ads.</h3>
+        <p class="lead">
+          Stream over 45 million songs, ad-free. Or download albums and tracks
+          to listen to offline. All the music in your personal myTunes library —
+          no matter where it came from — lives right alongside the Orange Music
+          catalog. Start your free three-month trial with no commitment, and
+          cancel anytime.
+        </p>
+        <a href="#" class="btn btn-primary mb">Start Your Trial Now</a>
+        <p class="text-music">
+          Orange Music is available in myTunes, and for iOS and Android devices.
+        </p>
+        <img src="Assert/mockup1.png" alt="" />
+      </div>
+    </section>
   </body>
 </html>
