--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
     <title>myTunes</title>
   </head>
   <body>
@@ -19,7 +26,7 @@
       <header>
         <nav>
           <ul>
-            <li class="licls">
+            <li>
               <a href="#banner">myTunes</a>
             </li>
             <li>
@@ -35,13 +42,13 @@
               <a href="#banner">Gift Cards</a>
             </li>
           </ul>
-          <!-- <a href="#" id="openup">myTunes</a> -->
+          <a href="#" id="openup">myTunes</a>
         </nav>
       </header>
       <div class="section-main container">
         <h1>myTunes</h1>
         <h2>Your music, movies, and TV shows take center stage.</h2>
-        <p class="lead hide-on-small">
+        <p>
           myTunes is the best way to organize and enjoy the music, movies, and
           TV shows you already have — and shop for the ones you want. Enjoy all
           the entertainment myTunes has to offer on your Mac and PC.
@@ -50,21 +57,160 @@
     </div>
     <section id="music" class="section">
       <div class="container">
-        <h2 class="section-head"><i class="fas fa-music"></i> Music</h2>
+        <h2><i class="fas fa-music"></i> Music</h2>
         <h3>45 million songs. Zero ads.</h3>
-        <p class="lead">
+        <p>
           Stream over 45 million songs, ad-free. Or download albums and tracks
           to listen to offline. All the music in your personal myTunes library —
           no matter where it came from — lives right alongside the Orange Music
           catalog. Start your free three-month trial with no commitment, and
           cancel anytime.
         </p>
-        <a href="#" class="btn btn-primary mb">Start Your Trial Now</a>
+        <a href="#" class="btn1">Start Your Trial Now</a>
         <p class="text-music">
           Orange Music is available in myTunes, and for iOS and Android devices.
         </p>
-        <img src="Assert/mockup1.png" alt="" />
+        <img class="cell" src="Assert/mockup1.png" alt="cell" />
       </div>
     </section>
+
+    <section id="video" class="section">
+      <div class="container">
+        <h3>The movie and TV collection you always wished for. Granted.</h3>
+        <p>
+          With over 100,000 movies and TV shows to choose from, there's always
+          something great to watch on myTunes and if you watch on Orange TV 4K,
+          you'll be able to enjoy a tremendous selection of your favorite
+          content in 4K HDR. So get ready to enjoy episodes of your favorite TV
+          shows or hit movies you've been waiting to see — anytime, anywhere.
+          Just tap to play, or even download if you're going somewhere you won't
+          have Wi-Fi.
+        </p>
+        <a href="#" class="btn2">Read More</a>
+        <img class="video_img" src="Assert/mockup2.png" alt="TAb" />
+      </div>
+    </section>
+
+    <section id="dark_img" class="section">
+      <div class="container">
+        <h3>A world of entertainment. Available wherever you are.</h3>
+        <p id="dark_para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+          veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo non
+          velit repellat alias saepe inventore repellendus? Molestias suscipit
+          eos tempora? Quae quaerat cumque in veritatis impedit dolorum sapiente
+          recusandae minima quo aperiam quam, excepturi quasi totam ad quas?
+          Ipsam laudantium soluta delectus!
+        </p>
+      </div>
+    </section>
+
+    <section id="gift-cards" class="section">
+      <div class="container">
+        <div class="gift-cards">
+          <div>
+            <img id="gift_img" src="Assert/cards.png" alt="gift-cards" />
+          </div>
+          <div>
+            <h2>Gift Cards</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque
+              expedita tempore quasi omnis a aut et totam illo fuga accusamus
+              dolorum vero, ut harum consectetur. Minima molestias officiis
+              culpa non sed dicta itaque. Et aliquam illo obcaecati molestias
+              veritatis porro.
+            </p>
+            <p>Already have an Orange MyTunes Music Gift Card?</p>
+            <hr />
+            <a href="#" class="text-reedem">
+              <i class="fas fa-chevron-right"></i> Redeem
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <ul>
+            <li>Shop & Learn</li>
+            <li>
+              <a href="#">Music</a>
+            </li>
+            <li>
+              <a href="#">Movies</a>
+            </li>
+            <li>
+              <a href="#">Shows</a>
+            </li>
+            <li>
+              <a href="#">Apps</a>
+            </li>
+            <li>
+              <a href="#">Gift Cards</a>
+            </li>
+          </ul>
+
+          <ul>
+            <li>Orange Store</li>
+            <li>
+              <a href="#">Find a Store</a>
+            </li>
+            <li>
+              <a href="#">Today at Orange</a>
+            </li>
+            <li>
+              <a href="#">Orange Camp</a>
+            </li>
+            <li>
+              <a href="#">Financing</a>
+            </li>
+            <li>
+              <a href="#">Order Status</a>
+            </li>
+          </ul>
+
+          <ul>
+            <li>Education & Business</li>
+            <li>
+              <a href="#">Orange & Education</a>
+            </li>
+            <li>
+              <a href="#">Shop For College</a>
+            </li>
+            <li>
+              <a href="#">Orange & Business</a>
+            </li>
+            <li>
+              <a href="#">Shop For Business</a>
+            </li>
+            <li>
+              <a href="#">Jobs</a>
+            </li>
+          </ul>
+
+          <ul>
+            <li>About Orange</li>
+            <li>
+              <a href="#">Newsroom</a>
+            </li>
+            <li>
+              <a href="#">Orange Leadership</a>
+            </li>
+            <li>
+              <a href="#">Investors</a>
+            </li>
+            <li>
+              <a href="#">Events</a>
+            </li>
+            <li>
+              <a href="#">Contact Orange</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-cpy">Copyright &copy; 2019 Orange myTunes</div>
+    </footer>
   </body>
 </html>
